--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ header {
 
 .sectionTwo {
     background-color: white;
-    height: 275px;
+    height: 300px;
     margin-bottom: 15px;
     text-align: left;
     border-radius: 3px;
@@ -55,4 +55,16 @@ header {
     width: 100%;
     height: 150px;
     object-fit: cover;
+}
+
+a:hover {
+    text-decoration: none;
+
+
+}
+
+.sectionText {
+    padding-left: 10px;
+
+
 }
