--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-    height: 500px;
+    height: 760px;
     background-image: url("../img/banner.PNG");
     background-size: cover;
     background-position: center;
@@ -84,62 +84,32 @@ a:hover {
     padding: 50px;
 }
 
-.topnav {
-    background-color: black;
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top: 0;
 }
 
-.topnav a {
+li {
+    float: left;
+
+}
+
+li a {
+    display: block;
+    color: white;
     text-align: center;
-    color: white;
-    text-decoration: none;
     padding: 14px 16px;
-    font-size: 30px;
-}
-
-.topnav a:hover {
-    background-color: #DFDFDF;
-    color: black;
+    text-decoration: none;
 
 }
 
-.topnav a.active {
-    background-color: #4caf50;
-    color: white;
-
+li a:hover{
+    background-color: #111111;
 }
 
-.slideshow {
-    max-width: 100px;
-    position: relative;
-    margin: auto;
-}
-
-.slides {
-    display: none;
-
-}
-
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-}
-
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-img.resize {
-    height: 100px;
-
-}
